# pd-chuck

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CREDITS.md  LICENSE  Makefile  README.md  TODO.md  chuck  makefile  patch.diff
.github/workflows/: ck_builder.yml  ck_builder_linux.yml  ck_builder_macos.yml
chuck_tilde/: CMakeLists.txt  chuck_tilde.cpp  help-chuck.pd
chuck_tilde/examples/: README.md  chuck
chuck_tilde/examples/fauck/: pd.fauReverb.ck
chuck_tilde/examples/fluidsynth/: README.md
chuck_tilde/examples/pd/: test.ck
chuck_tilde/tests/: test_audio.pd  test_ck_add.pd  test_ck_edit.pd  test_ck_eval.pd  test_ck_file.pd  test_dual.pd  test_faust.pd  test_repl.pd  test_warpbuf.pd
chuck~/: .gitignore  CMakeLists.txt  Makefile  chuck~.cpp  help-chuck.pd  test-chuck-dual.pd
chuck~/examples/: pdtest.ck
core/: CMakeLists.txt  chuck.yy.c  chuck_emit.cpp  chuck_instr.cpp  chuck_io.cpp  chuck_lang.cpp  chuck_oo.cpp  chuck_scan.cpp  chuck_type.cpp  chuck_type.h  uana_xform.cpp  ugen_stk.cpp  ulib_machine.cpp  ulib_math.cpp  ulib_opsc.cpp  ulib_std.cpp  util_math.c
docs/: linux-bugs.txt  pd-chuck.xlsx
faustgen2_tilde/: CMakeLists.orig.cmake  CMakeLists.txt  LICENSE  README.md
faustgen2_tilde/src/: faust_tilde_io.c  faust_tilde_io.h  faust_tilde_options.c  faust_tilde_ui.c  faust_tilde_ui.h  faustgen_tilde.c
host/: CMakeLists.txt
puck/: Makefile  README.md  help-puck.pd  puck.cpp  puck~.alt.cpp  puck~.cpp  run_gdb.sh  test-puck.pd
puck/include/core/: chuck_type.h  util_math.h
scripts/: change_rtaudio.sh  download_sf2.sh  install_deps.sh  install_deps_homebrew.sh  install_min_deps.sh  run_gdb.sh  transform.sh  update.sh
scripts/cmake/: chugin.cmake  fn_add_chugin.cmake  genexps.cmake
scripts/patch/: chuck_core_cmakelists.patch  chuck_tilde.patch  chugins_cmakelists.patch
